--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ prepare_conda: &prepare_conda
   run:
     name: Prepare and activate the conda environment
     command: |
-      conda create -n "maka_paper" python==3.7.9
-      conda activate maka_paper
+      conda create -n "maka_paper" python==3.7.9 -y
+      source activate maka_paper
 
 jobs:
   build:
