--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,17 @@ defaults: &defaults
     - image: continuumio/miniconda3
   working_directory: ~/project
 
-prepare_conda: &prepare_conda
+prepare_conda: &prepare_conda_env
   run:
     name: Prepare and activate the conda environment
     command: |
       conda create -n "maka_paper" python==3.7.9 -y
       source activate maka_paper
+      ls
 
 jobs:
   build:
     <<: *defaults
     steps:
       - checkout
-      - *prepare_conda
+      - *prepare_conda_env
