--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,10 @@ prepare_conda: &prepare_conda_env
     command: |
       conda create -n "maka_paper" python==3.7.9 -y
       source activate maka_paper
-      ls
+      pip install -r Transparency/requirements.txt
+      python -m spacy download en
+      conda install -c anaconda jupyter -y
+      conda install -c anaconda pytest -y
 
 jobs:
   build:
