--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,11 @@ defaults: &defaults
     - image: continuumio/miniconda3
   working_directory: ~/project
 
-prepare_conda: &prepare_conda_env
+prepare_conda: &prepare_build
   run:
-    name: Prepare and activate the conda environment
+    name: Prepares the project build
     command: |
+      apt-get -y install make
       conda create -n "maka_paper" python==3.7.9 -y
       source activate maka_paper
       pip install -r Transparency/requirements.txt
