--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ prepare_conda: &prepare_build
       apt-get -y install make
       conda create -n "maka_paper" python==3.7.9 -y
       source activate maka_paper
+      conda install -c conda-forge jsonnet
       pip install -r Transparency/requirements.txt
       python -m spacy download en
       conda install -c anaconda jupyter -y
