--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,10 @@ prepare_conda: &prepare_build
     name: Prepares the project build
     command: |
       apt-get -y install make
+      apt-get -y install g++
       conda create -n "maka_paper" python==3.7.9 -y
       source activate maka_paper
-      conda install -c conda-forge jsonnet
+      conda install -c conda-forge jsonnet -y
       pip install -r Transparency/requirements.txt
       python -m spacy download en
       conda install -c anaconda jupyter -y
