--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,16 @@ jobs:
     steps:
       - checkout
       - *prepare_build
+  test:
+    steps:
+      command: |
+        pytest Transparency/tests/
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
