--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ run_tests: &run_tests
   run:
     name: "Runs tests with Pytest"
     command: |
-      pytest Transparency/tests/
+      python -m pytest Transparency/tests/
 
 jobs:
   build:
