--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ prepare_build: &prepare_build
       apt-get -y install g++
       conda create -n "maka_paper" python==3.7.9 -y
       source activate maka_paper
+      conda env list
       pip install -r Transparency/requirements.txt
       python -m spacy download en
       conda install -c anaconda jupyter -y
@@ -23,6 +24,7 @@ run_tests: &run_tests
     name: "Runs tests with Pytest"
     command: |
       source activate maka_paper
+      conda env list
       python -m pytest Transparency/tests/
 
 jobs:
